# django_backend_for_memes_vk

./: .coverage  .dockerignore  .env.swp  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  db.sqlite3  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
bot_backend/: asgi.py  settings.py  urls.py  wsgi.py
bot_backend/bot_db_models/: admin.py  apps.py  filters.py  models.py  serializers.py  service.py  urls.py  views.py  yasg.py
bot_backend/bot_db_models/tests/: conftest.py  tests_cases_models.json
bot_backend/bot_db_models/tests/test_models/: test_models.py
bot_backend/bot_db_models/tests/test_service/: test_cases_service.json  test_module_service.py
bot_backend/bot_db_models/tests/test_views/: test_view.py
docker_nginx/: nginx.conf
