[tool.poetry]
name = "bot-backend"
version = "0.1.0"
description = "REST backend for MemesBot"
authors = ["Yakovishin Timofey <yakovishintimofey@gmail.com>"]
readme = "README.md"
packages = [{include = "bot_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "1.0.0"
requests= "2.27.1"
python-telegram-bot= "13.11"
djangorestframework= "3.14.0"
pandas = "^2.0.1"
psycopg2-binary = "^2.9.6"
markdown = "^3.4.3"
django = "3.2"
gunicorn = "^20.1.0"
drf-yasg = "^1.21.5"
flake8 = "^6.0.0"
django-extensions = "^3.2.1"
ipython = "^8.13.2"
whitenoise = "^6.4.0"
colorama = "^0.4.6"
pytest-django = "^4.5.2"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pydot = "^1.4.2"
graphviz = "^0.20.1"
pyparsing = "^3.0.9"
pytest = "^7.3.1"
dj-database-url = "^2.0.0"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bot_backend.settings"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target_version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3

